src/parse/snapshots/blis__parse__lexer__tests__test_programs__err_compile__break_label_missing.blis.tokens.snap
---
source: src/parse/lexer.rs
description: "loop outer {\n    break inner;\n}\n"
input_file: test_programs/err_compile/break_label_missing.blis
---
[
  Lexeme(
    token: Loop,
    text: "loop",
    line: 1,
  ),
  Lexeme(
    token: Identifier,
    text: "outer",
    line: 1,
  ),
  Lexeme(
    token: LeftBrace,
    text: "{",
    line: 1,
  ),
  Lexeme(
    token: Break,
    text: "break",
    line: 2,
  ),
  Lexeme(
    token: Identifier,
    text: "inner",
    line: 2,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 2,
  ),
  Lexeme(
    token: RightBrace,
    text: "}",
    line: 3,
  ),
  Lexeme(
    token: Eof,
    text: "",
    line: 4,
  ),
]
